k8s/service_converter.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-converter
spec:
  type: ExternalName
  externalName: svc-converter.docusaurus.svc.cluster.local
